Adjust custom cursor to be in the middle of the cursor, hide overflow of container to avoid scroll bars appearing

--- a/src/app/pages/landing/components/landing-page/landing-page.component.scss
+++ b/src/app/pages/landing/components/landing-page/landing-page.component.scss
@@ -14,6 +14,7 @@
   height: 100%;
   background-color: #000000;
   cursor: none;
+  overflow: hidden;
 }
 
 .landing-loading-cursor {
@@ -21,6 +22,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  transform: translate(-50%, -50%);
   background-color: #ffffff;
   animation: loadingBounce 1s infinite;
 }
@@ -90,7 +92,7 @@
     transform: scale(1);
   }
   50% {
-    transform: scale(1.1);
+    transform: scale(1.15);
   }
   100% {
     transform: scale(1);
